--- a/.github/workflows/continuous-integration-workflow.yaml
+++ b/.github/workflows/continuous-integration-workflow.yaml
@@ -12,14 +12,14 @@ jobs:
                       appname: Pharo
                       vmExecutable: pharo
                     - os: ubuntu-18.04
-                      appname: GToolkit
-                      vmExecutable: gtoolkit
+                      appname: GlamorousToolkit
+                      vmExecutable: glamoroustoolkit
                     - os: macos-latest
                       appname: Pharo
                       vmExecutable: pharo
                     - os: macos-latest
-                      appname: GToolkit
-                      vmExecutable: GToolkit
+                      appname: GlamorousToolkit
+                      vmExecutable: GlamorousToolkit
         env:
             APPNAME: ${{matrix.variant.appname}}
             VM_EXECUTABLE_NAME: ${{ matrix.variant.vmExecutable }}
@@ -75,8 +75,8 @@ jobs:
                 variant:
                     - appname: Pharo
                       vmExecutable: Pharo
-                    - appname: GToolkit
-                      vmExecutable: GToolkit
+                    - appname: GlamorousToolkit
+                      vmExecutable: GlamorousToolkit
         env:
             APPNAME: ${{matrix.variant.appname}}
             VM_EXECUTABLE_NAME: ${{ matrix.variant.vmExecutable }}
@@ -160,7 +160,7 @@ jobs:
                 asset_path: build-artifacts.zip
                 asset_name: build-artifacts.zip
                 asset_content_type: application/zip
-            - name: Trigger GToolkit job
+            - name: Trigger GlamorousToolkit job
               uses: appleboy/jenkins-action@master
               with:
                 url: "https://jenkins.feenk.com/"
