--- a/resources/windows/GToolkit.exe.manifest.in
+++ b/resources/windows/GToolkit.exe.manifest.in
@@ -9,7 +9,7 @@
 	name="www.feenk.com.VM"
 	type="win32"
 />
-<description>GToolkit Virtual Machine</description>
+<description>GlamorousToolkit Virtual Machine</description>
 <asmv3:application>
 	<asmv3:windowsSettings xmlns="http://schemas.microsoft.com/SMI/2005/WindowsSettings">
 		<dpiAware>true</dpiAware>
