--- a/.github/workflows/continuous-integration-workflow.yaml
+++ b/.github/workflows/continuous-integration-workflow.yaml
@@ -11,20 +11,73 @@ jobs:
                     - os: ubuntu-18.04
                       appname: Pharo
                       vmExecutable: pharo
+                      platform: linux
                     - os: macos-latest
                       appname: Pharo
                       vmExecutable: Pharo
+                      platform: mac
         env:
             APPNAME: ${{matrix.variant.appname}}
             VM_EXECUTABLE_NAME: ${{ matrix.variant.vmExecutable }}
             CC: clang
             CXX: clang++
+            PKG_CONFIG_PATH: ${GITHUB_WORKSPACE}/openssl-1.1.1g/lib/pkgconfig:${GITHUB_WORKSPACE}/libssh2/lib/pkgconfig:${GITHUB_WORKSPACE}/libgit2/lib/pkgconfig
         steps:
-            - name: Install dependencies
+            - name: Install dependencies (linux)
               if: matrix.variant.os == 'ubuntu-18.04'
               run: sudo apt-get install uuid-dev
 
-            - uses: actions/checkout@v1
+            - name: Install dependencies (mac)
+              if: matrix.variant.platform == 'mac'
+              run: brew install pkg-config
+
+            - uses: actions/checkout@v2
+
+            - name: Retrieve openssl libraries (ubuntu)
+              if: matrix.variant.platform == 'linux'
+              run: |
+                wget https://github.com/feenkcom/libssl_build/releases/download/v1.1.1g-ubuntu-18.04/libssl-dev-ubuntu-18.04.zip
+                unzip libssl-dev-ubuntu-18.04.zip
+
+            - name: Retrieve openssl libraries (mac)
+              if: matrix.variant.platform == 'mac'
+              run: |
+                wget https://github.com/feenkcom/libssl_build/releases/download/v1.1.1g-macos-latest/libssl-dev-macos-latest.zip
+                unzip libssl-dev-macos-latest.zip
+
+            - name: Retrieve libssh2 libraries (ubuntu)
+              if: matrix.variant.platform == 'linux'
+              run: |
+                wget https://github.com/feenkcom/libssh2_build/releases/download/v.1.9.0-linux/libssh2-dev-linux.zip
+                unzip libssh2-dev-linux.zip
+
+            - name: Retrieve libssh2 libraries (mac)
+              if: matrix.variant.platform == 'mac'
+              run: |
+                wget https://github.com/feenkcom/libssh2_build/releases/download/v.1.9.0-mac/libssh2-dev-mac.zip
+                unzip libssh2-dev-mac.zip
+
+            - name: Retrieve libgit2 libraries (ubuntu)
+              if: matrix.variant.platform == 'linux'
+              run: |
+                wget https://github.com/feenkcom/libgit2_build/releases/download/v0.25.1-linux/libgit2-dev-linux.zip
+                unzip libgit2-dev-linux.zip
+
+            - name: Retrieve libgit2 libraries (mac)
+              if: matrix.variant.platform == 'mac'
+              run: |
+                wget https://github.com/feenkcom/libgit2_build/releases/download/v0.25.1-mac/libgit2-dev-mac.zip
+                unzip libgit2-dev-mac.zip
+
+            - name: Top directory
+              run: ls -l ${GITHUB_WORKSPACE}
+
+            - name: Find libraries
+              run: |
+                echo "PKG_CONFIG_PATH: ${PKG_CONFIG_PATH}"
+                ls -l ${GITHUB_WORKSPACE}/openssl-1.1.1g/lib/pkgconfig
+                ls -l ${GITHUB_WORKSPACE}/libssh2/lib/pkgconfig
+                ls -l ${GITHUB_WORKSPACE}/libgit2/lib/pkgconfig
 
             - name: CMake configuration
               run: |
@@ -32,14 +85,36 @@ jobs:
                 cd build
                 cmake .. -DAPPNAME=$APPNAME -DVM_EXECUTABLE_NAME=$VM_EXECUTABLE_NAME
 
-            - name: make
-              run: cd build && make
-            - name: make install
-              run: cd build && make install
+            - name: Build
+              run: |
+                cd build
+                cmake --build .
+
+            - name: Update libraries (mac)
+              if: matrix.variant.platform == 'mac'
+              run: |
+                find build/build/vm
+                cp -v openssl-1.1.1g/lib/lib*dylib* build/build/vm/Pharo.app/Contents/MacOS/Plugins/
+                cp -v libssh2/lib/lib*dylib* build/build/vm/Pharo.app/Contents/MacOS/Plugins/
+                cp -v libgit2/lib/lib*dylib* build/build/vm/Pharo.app/Contents/MacOS/Plugins/
+
+            - name: Update libraries (linux)
+              if: matrix.variant.platform == 'linux'
+              run: |
+                cp -v openssl-1.1.1g/lib/lib*so* build/build/vm/
+                cp -v libssh2/lib/lib*so* build/build/vm/
+                cp -v libgit2/lib/lib*so* build/build/vm/
+
+            - name: Install
+              run: |
+                cd build
+                cmake --install .
+                make install
 
             - name: Package artifacts
               run: |
                 cd build
+                cmake --package .
                 make package
                 mkdir -p ../artifacts
                 cp -f build/packages/*.zip build/packages/*.sha1 ../artifacts
@@ -65,8 +140,8 @@ jobs:
         strategy:
             matrix:
                 variant:
-                    - appname: Pharo
-                      vmExecutable: Pharo
+                    - appname: GlamorousToolkit
+                      vmExecutable: GlamorousToolkit
         env:
             APPNAME: ${{matrix.variant.appname}}
             VM_EXECUTABLE_NAME: ${{ matrix.variant.vmExecutable }}
