[feenkcom/gtoolkit#1958] specify the osx deployment target

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,14 @@ if ((CMAKE_HOST_UNIX) AND (${CMAKE_HOST_SYSTEM_NAME} MATCHES "CYGWIN*"))
   SET(CMAKE_SYSTEM_PROCESSOR x86_64)
 endif()
 
+
+#If in OSX, specify the deployment target
+if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+  # See https://cmake.org/cmake/help/latest/variable/CMAKE_OSX_DEPLOYMENT_TARGET.html#variable:CMAKE_OSX_DEPLOYMENT_TARGET
+  # it must be specified before first project() or enable_language() invocations
+  set(CMAKE_OSX_DEPLOYMENT_TARGET '10.10')
+endif()
+
 project(PharoVM)
 
 set(FLAVOUR CoInterpreterWithQueueFFI CACHE STRING "The kind of VM to generate. Possible values: StackVM, CogVM, CoInterpreterWithQueueFFI")
@@ -117,7 +125,7 @@ elseif(UNIX)
         set(OS_TYPE "Mac OS")
         set(VM_TARGET_OS "1000") # Used to recognise OS X
 
-        set(COMMON_FLAGS "-stdlib=libc++ -mmacosx-version-min=10.7 ${COMMON_FLAGS}  -Wno-implicit-function-declaration")
+        set(COMMON_FLAGS "-stdlib=libc++ ${COMMON_FLAGS}  -Wno-implicit-function-declaration")
 
     elseif(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
         set(VM_TARGET_OS "linux-gnu")
