--- a/.github/workflows/continuous-integration-workflow.yaml
+++ b/.github/workflows/continuous-integration-workflow.yaml
@@ -25,7 +25,7 @@ jobs:
       CERT: ${{ secrets.certificate }}
       SIGNING_IDENTITY: "Developer ID Application: feenk gmbh (77664ZXL29)"
       PKG_CONFIG_PATH: ${GITHUB_WORKSPACE}/openssl-1.1.1g/lib/pkgconfig:${GITHUB_WORKSPACE}/libssh2/lib/pkgconfig:${GITHUB_WORKSPACE}/libgit2/lib/pkgconfig
-      MACOSX_DEPLOYMENT_TARGET: 10.10
+      MACOSX_DEPLOYMENT_TARGET: "10.9"
     steps:
       - name: Install dependencies (linux)
         if: matrix.variant.os == 'ubuntu-18.04'
@@ -36,6 +36,14 @@ jobs:
       - name: Install dependencies (mac)
         if: matrix.variant.os == 'macos-latest'
         run: brew install pkg-config
+      - name: Install macOS SDK
+        if: runner.os == 'macOS'
+        run: |
+          curl -L -O https://github.com/phracker/MacOSX-SDKs/releases/download/10.15/MacOSX${MACOSX_DEPLOYMENT_TARGET}.sdk.tar.xz
+          tar -xf MacOSX${MACOSX_DEPLOYMENT_TARGET}.sdk.tar.xz -C "$(dirname "$CONDA_BUILD_SYSROOT")"
+          # set minimum sdk version to our target
+          plutil -replace MinimumSDKVersion -string ${MACOSX_DEPLOYMENT_TARGET} $(xcode-select -p)/Platforms/MacOSX.platform/Info.plist
+          plutil -replace DTSDKName -string macosx${MACOSX_DEPLOYMENT_TARGET}internal $(xcode-select -p)/Platforms/MacOSX.platform/Info.plist
 
       - uses: actions/checkout@v2
 
